--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -29,7 +29,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     padding: 40px 80px 0 80px;
-}
+  }
 
 nav img {
     height: 29px;
@@ -149,4 +149,39 @@ header h2 span {
 .header-section {
   margin-top: 200px;
   margin-bottom: 100px;
+}
+
+.quote-section {
+  background: #C271FF;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 60px;
+  padding: 100px 0;
+}
+
+.quote-section blockquote {
+  font-size: 22px;
+  margin-bottom: 20px;
+  line-height: 1.5;
+  width: 750px;
+  font-style:normal;
+  font-weight: 400;
+}
+
+.quote-section h3 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 33.6px;
+  margin-bottom: 4px;
+  font-style: normal;
+}
+
+.quote-section p {
+  line-height: 33.6px;
+  font-size: 22px;
+  color: #fff;
+  opacity: 0.8;
+  margin: 0;
 }
