--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -435,3 +435,53 @@ h2,h3,h4,.video-description,.video-duration {
   background: #a34edc;
   transform: translateY(-3px);
 }
+
+.faq-section {
+  background: #fff;
+  color: #071629;
+  padding: 64px 0 64px 0;
+  text-align: center;
+}
+
+.faq-section h2 {
+  font-size: 60px;
+  font-weight: lighter;
+  margin-bottom: 60px;
+  letter-spacing: 2px;
+  color: #071629;
+  text-align: center;
+  background: transparent;
+  position: relative;
+  z-index: 1;
+}
+
+.faq-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 60px 120px;
+  width: 920px;
+  height: 707px;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.faq-item {
+  margin-bottom: 40px;
+}
+
+.faq-item h3 { margin-bottom: 40px;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+
+.faq-p { 
+  margin-bottom: 18px;
+  font-weight: regular;
+  font-size: 14px;
+  color: #838383;
+  line-height: 24px;
+  margin: 0;
+  font-style: normal;
+  width: 350px;
+}
