--- a/headphones/1-styles.css
+++ b/headphones/1-styles.css
@@ -55,7 +55,7 @@ body {
   font-size: 12px;
   font-weight: bold;
   letter-spacing: 0.5px;
-  transition: color 0.3s;
+  transition: color 0.9s;
 }
 
 .main-nav a:hover {
@@ -77,7 +77,7 @@ body {
 
 .hero-content {
   max-width: 637px;
-  margin-top: 150px;
+  margin-top: 300px;
   color: #fff;
 }
 
@@ -92,7 +92,7 @@ body {
 }
 
 .cta-btn {
-  background: #ff5e6c;
+  background: #ff6565;
   color: #fff;
   border: none;
   border-radius: 20px;
@@ -134,6 +134,61 @@ body {
   margin: 4px 0;
   border-radius: 2px;
   transition: 0.3s;
+}
+
+/* WHAT WE DO SECTION */
+.section-description p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  color: #071629;
+  width: 650px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 700px;
+  margin-top: 40px;
+}
+.section-description h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 34px;
+  text-align: center;
+  color: #020E1D;
+  margin-bottom: 20px;
+  margin-top: 100px;
+}
+
+.icon-block1 img {
+  width: 94.2px;
+  height: 65.36px;
+  margin-bottom: 40px;
+}
+.icon-block2 img {
+  width: 67.59px;
+  height: 76.8px;
+  margin-bottom: 40px;
+}
+.icon-block3 img {
+  width: 51.66px;
+  height: 57.27px;
+  margin-bottom: 40px;
+}
+.icon-block4 img {
+  width: 61.43px;
+  height: 61.44px;
+  margin-bottom: 40px;
+}
+
+.icon-services {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 100px;
 }
 
 /* RESPONSIVE STYLES */
